--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.1",
-    "@testing-library/user-event": "^12.2.0",
+    "@testing-library/react": "^11.1.2",
+    "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "axios-react": "^2.0.2",
+    "js-cookie": "^2.2.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
